Fixed Exp! Only need to fix spacing between the wording due to the image

--- a/resume.css
+++ b/resume.css
@@ -473,3 +473,7 @@ meter::-webkit-meter-bar {
 .icc{
   text-align: center;
 }
+
+.noHover {
+  pointer-events: none;
+}
